--- a/config.toml
+++ b/config.toml
@@ -19,9 +19,18 @@ identifier = 'home'
 name = 'Home'
 url = '/'
 params.icon = 'home'
+weight = -100
+
+[[menu.main]]
+identifier = 'discussions'
+name = 'Discussions'
+url = 'https://github.com/evshiron/are-we-gfx1100-yet/discussions'
+params.icon = 'messages'
+weight = 90
 
 [[menu.main]]
 identifier = 'source'
 name = 'Source'
 url = 'https://github.com/evshiron/are-we-gfx1100-yet'
 params.icon = 'brand-github'
+weight = 100
