--- a/config.toml
+++ b/config.toml
@@ -39,7 +39,7 @@ weight = -100
 [[menu.main]]
 identifier = 'discussions'
 name = 'Discussions'
-url = 'https://github.com/evshiron/are-we-gfx1100-yet/discussions'
+url = 'https://github.com/are-we-gfx1100-yet/are-we-gfx1100-yet.github.io/discussions'
 params.icon = 'messages'
 weight = 80
 
@@ -53,6 +53,6 @@ weight = 90
 [[menu.main]]
 identifier = 'source'
 name = 'Source'
-url = 'https://github.com/evshiron/are-we-gfx1100-yet'
+url = 'https://github.com/are-we-gfx1100-yet/are-we-gfx1100-yet.github.io'
 params.icon = 'brand-github'
 weight = 100
